# github-actions-for-ci-cd-4375061

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: docker-publish.yml  go-ci-workflow.yml  node.js.yml  python-app.yml  python-ci-workflow.yml  python-ds.yml
Ch00/: main.py
Ch02/: README.md
Ch02/02_03_ci_for_javascript/: package.json
Ch02/02_06_challenge_develop_a_ci_pipeline/: test_pandas_version.py
Ch02/02_07_solution_develop_a_ci_pipeline/: test_pandas_version.py
Ch03/03_05_challenge_develop_a_container_image_pipeline/: app.py
Ch04/04_05_ci_cd_for_container_images/: app.py
src/: package.json
