[tool.poetry]
name = "github-actions-for-ci-cd-4375061"
version = "0.1.0"
description = ""
authors = ["Mohammad Resshadati <mohammad.reshadati@postnl.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.7.2"

[tool.ruff]
extend-select = ["C4","SIM","TCH"]
ignore = []
show-fixes = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
