[tool.poetry]
name = "github-actions-for-ci-cd-4375061"
version = "0.1.0"
description = ""
authors = ["Mohammad Resshadati <mohammad.reshadati@postnl.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.7.2"
pre-commit = "^4.0.1"
fastapi = "^0.115.4"
uvicorn = "0.20.0"
httpx = "^0.27.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Enumerate all fixed violations.
show-fixes = true

[tool.ruff.lint]

extend-select = ["C4","SIM","TCH"]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = []



